--- a/browser.html
+++ b/browser.html
@@ -7,15 +7,9 @@
   <link rel="stylesheet" href="/css/master.css">
 </head>
 <body>
-<div class="titleimage center">
-  <div class="title">
-    <h1>PyLabo</h1>
-  </div>
-  <div class="navbar">
-    <a href="https://github.com/ideanebula/source">View on GitHub</a>
-    <a href="https://github.com/ideanebula/source/archive/master.zip">Download .zip</a>
-    <a href="https://github.com/ideanebula/source/archive/master.tar.gz">Download .tar.gz</a>
-  </div>
+<div class="browser">
+  <iframe href="https://google.com">
+  </iframe>
 </div>
 </body>
 </html>
