--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
   <title>PyLabo</title>
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-  <link rel="stylesheet" href="/css/master.css">
+  <!--<link rel="stylesheet" href="/css/master.css">-->
   <link rel="stylesheet" href="https://raw.githubusercontent.com/htmllabo/modernhtml/master/css/index.css">
 </head>
 <body>
 <div class="titleimage center">
-  <div class="title">
-    <h1>PyLabo</h1>
-  </div>
+  <h1>PyLabo</h1>
   <div class="navbar">
-    <a href="https://github.com/ideanebula/source">View on GitHub</a>
-    <a href="https://github.com/ideanebula/source/archive/master.zip">Download .zip</a>
-    <a href="https://github.com/ideanebula/source/archive/master.tar.gz">Download .tar.gz</a>
+    <a href="https://github.com/pylabo">View on GitHub</a>
+    <a href="https://github.com/pylabo/AWK.py">Download AWK.py.zip</a>
+    <a href="https://github.com/pylabo/AWK.py">Download AWK.py.tar.gz</a>
   </div>
 </div>
 </body>
