--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>PyLabo</title>
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-  <!--<link rel="stylesheet" href="/css/master.css">-->
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/htmllabo/modernhtml/master/css/index.css">
+  <link rel="stylesheet" href="/css/master.css">
+  <!--<link rel="stylesheet" href="https://raw.githubusercontent.com/htmllabo/modernhtml/master/css/index.css">-->
 </head>
 <body>
 <div class="titleimage center">
